*
* 2.2.8
*

- Delayed actions in event processing policy
- Raw event data stored in event log
- New hook scripts: PostObjectCreate and DiscoveryPoll
- Implemented watchdog functionality for external subagents
- SNMP port and context can be specified in NXSL function CreateSNMPTransport
- Fixed issues:
	NX-1472 (Physical Hyper-V Hosts are reporting as Node Type "Virtual" in 2.2.7)
	NX-1480 (Varbinds in SNMP Traps restricted to 255 characters)


*
* 2.2.7
*

- "Convert to hexadecimal string" option for SNMP table columns
- Improved configuration wizard in Windows server installer
- New command line option /CONFIGENTRY in Windows agent installer
- New dashboard element "Object Details" (based on object queries)
- TCP proxy functionality
- Improved "Alarm Details" view in management console
- Added support for agent actions defined in external subagents
- TCP listener can be disabled in agent configuration file
- Push connector can be disabled in agent configuration file
- Virtual nodes detection via agent
- Basic BIOS and hardware platform information provided by Windows agent
- Fixed issues:
	NX-993 (Windows installer should honor current state of services during upgrade)
	NX-1438 (Increase debug level for thread pool messages)
	NX-1453 (Windows installer option to disable database upgrade)
	NX-1455 (Zone UIN in NXSL function CreateNode)
	NX-1456 (DCI values aggregated on cluster may be incorrect on first few polls after server startup)
	NX-1460 (Configure does not detect pthread_setname_np on macOS)
	NX-1464 (Agent connection via proxy is not working for IPv6 destinations)
	NX-1466 (Line length in agent's external table script limited to 255 characters)
	NX-1467 (Agent cannot process requests for parameters longer than 255 characters)


*
* 2.2.6
*

- NXSL based queries in object finder
- Fixed issues:
	NX-1395 (Change Object Filter to only search if at least 3 characters have been entered)
	NX-1451 (Additional configs not loaded on agent startup)


*
* 2.2.5
*
